--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>The First Flight</h1>
+    <p>The first flight was by the Wright brothers. Their dad gave them a toy plane which encouraged them to build planes when they were older. The plane was made out of wood but now planes are made from steel.</p>
+    <img src="https://assets.editorial.aetnd.com/uploads/2013/12/wright-brothers-gettyimages-489850565.jpg">
 </body>
 </html>
